--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>The Mind - Online</title>
-  <style>
-    body { font-family: sans-serif; text-align: center; }
-    #cards { display: flex; justify-content: center; flex-wrap: wrap; margin-top: 20px; }
-    .card { width: 80px; height: 120px; border: 1px solid #333; margin: 10px; line-height: 120px; font-size: 24px; cursor: pointer; background-color: #eee; }
-    #status { margin-top: 30px; font-size: 20px; }
-    #resources { margin-top: 20px; font-size: 18px; }
-  </style>
-</head>
 <body>
   <h1>The Mind - Online</h1>
-  <button onclick="startGame()">Start Game</button>
-  <button onclick="useShuriken()">Use Shuriken</button>
+
+  <div>
+    <label for="username">이름:</label>
+    <input id="username" placeholder="이름을 입력하세요" />
+    <button onclick="joinGame()">참가</button>
+  </div>
+
+  <button onclick="startGame()" disabled id="startBtn">Start Game</button>
+  <button onclick="useShuriken()" disabled id="shurikenBtn">Use Shuriken</button>
+
+  <div id="playerList"></div>
   <div id="resources"></div>
   <div id="cards"></div>
+
+  <h3>깔린 카드:</h3>
+  <div id="playedCards" style="display:flex; justify-content:center; flex-wrap:wrap;"></div>
+
   <div id="status"></div>
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
 </body>
-</html>
