--- a/index.html
+++ b/index.html
@@ -12,26 +12,46 @@
       text-align: center;
       margin: 10px 0;
     }
+
+    /* 카드 컨테이너: 가로 정렬 + 줄바꿈 */
     #cards, #playedCards {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 10px;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 8px;
       margin-top: 20px;
     }
+
+    /* 카드 디자인 */
     .card {
-      width: 80px;
-      height: 120px;
+      width: 50px;
+      height: 70px;
       border: 1px solid #333;
-      line-height: 120px;
-      font-size: 24px;
+      line-height: 70px;
+      font-size: 18px;
       background-color: #eee;
       cursor: pointer;
       user-select: none;
+      border-radius: 6px;
+      box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+      transition: background-color 0.2s ease;
     }
+    .card:hover {
+      background-color: #ddd;
+    }
+
     button:disabled {
       opacity: 0.5;
       cursor: not-allowed;
+    }
+
+    @media (max-width: 400px) {
+      .card {
+        width: 40px;
+        height: 60px;
+        font-size: 16px;
+        line-height: 60px;
+      }
     }
   </style>
 </head>
