--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,11 @@
 
     <div id="players"></div>
 
-    <div id="playedCards"></div>
+    <div id="playedCards" class="card-container"></div>
 
-    <div id="handContainer"></div>
+    <div id="handContainer" class="card-container"></div>
+
+    <div id="shurikenReveal" class="card-container"></div>
 
     <div id="controls">
       <button id="startBtn">게임 시작</button>
@@ -47,7 +49,6 @@
     </div>
 
     <p id="status"></p>
-    <div id="shurikenReveal"></div>
     <h1 id="resultMessage"></h1>
   </div>
 
