--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </div>
 
   <button onclick="startGame()" disabled id="startBtn">게임 시작</button>
-  <button onclick="useShuriken()" disabled id="shurikenBtn">수리검 사용</button>
+  <button onclick="requestShuriken()" disabled id="shurikenBtn">수리검 요청</button>
   <button onclick="nextLevel()" style="display:none;" id="nextLevelBtn">다음 레벨</button>
 
   <div id="playerList"></div>
