--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
   <button onclick="nextLevel()" style="display:none;" id="nextLevelBtn">다음 레벨</button>
 
   <div id="playerList"></div>
+  <div id="playerCardsCount" style="margin-bottom: 10px;"></div>
   <div id="resources"></div>
 
   <h3>내 카드</h3>
