--- a/index.html
+++ b/index.html
@@ -3,17 +3,33 @@
 <head>
   <title>The Mind - Online</title>
   <style>
+    :root {
+      --bg-color: #ffffff;
+      --text-color: #000000;
+      --card-bg: #eee;
+      --card-hover: #ddd;
+    }
+
+    body.dark {
+      --bg-color: #121212;
+      --text-color: #f0f0f0;
+      --card-bg: #333;
+      --card-hover: #444;
+    }
+
     body {
       font-family: sans-serif;
       text-align: center;
       margin: 20px;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      transition: background-color 0.3s, color 0.3s;
     }
+
     #playerList, #resources, #status {
-      text-align: center;
       margin: 10px 0;
     }
 
-    /* 카드 컨테이너: 가로 정렬 + 줄바꿈 */
     #cards, #playedCards {
       display: flex;
       flex-wrap: wrap;
@@ -22,22 +38,22 @@
       margin-top: 20px;
     }
 
-    /* 카드 디자인 */
     .card {
       width: 50px;
       height: 70px;
       border: 1px solid #333;
       line-height: 70px;
       font-size: 18px;
-      background-color: #eee;
+      background-color: var(--card-bg);
       cursor: pointer;
       user-select: none;
       border-radius: 6px;
       box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
       transition: background-color 0.2s ease;
     }
+
     .card:hover {
-      background-color: #ddd;
+      background-color: var(--card-hover);
     }
 
     button:disabled {
@@ -53,23 +69,44 @@
         line-height: 60px;
       }
     }
+
+    .top-controls {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 10px;
+      flex-wrap: wrap;
+    }
+
+    .theme-toggle {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+    }
   </style>
 </head>
 <body>
   <h1>The Mind - Online</h1>
 
-  <div>
-    <label for="username">이름:</label>
-    <input id="username" placeholder="이름을 입력하세요" />
-    <button onclick="joinGame()">참가</button>
+  <div class="top-controls">
+    <div>
+      <label for="username">이름:</label>
+      <input id="username" placeholder="이름을 입력하세요" />
+      <button onclick="joinGame()">참가</button>
+    </div>
+
+    <div>
+      <button onclick="startGame()" disabled id="startBtn">게임 시작</button>
+      <button onclick="useShuriken()" disabled id="shurikenBtn">수리검 사용</button>
+      <button onclick="nextLevel()" style="display:none;" id="nextLevelBtn">다음 레벨</button>
+    </div>
   </div>
 
-  <button onclick="startGame()" disabled id="startBtn">게임 시작</button>
-  <button onclick="requestShuriken()" disabled id="shurikenBtn">수리검 요청</button>
-  <button onclick="nextLevel()" style="display:none;" id="nextLevelBtn">다음 레벨</button>
+  <div class="theme-toggle">
+    <button onclick="toggleTheme()">🌗 테마 전환</button>
+  </div>
 
   <div id="playerList"></div>
-  <div id="playerCardsCount" style="margin-bottom: 10px;"></div>
   <div id="resources"></div>
 
   <h3>내 카드</h3>
@@ -82,5 +119,11 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
+  <script>
+    // 테마 토글
+    function toggleTheme() {
+      document.body.classList.toggle('dark');
+    }
+  </script>
 </body>
 </html>
