--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     }
 
     #playerList, #resources, #status {
-      text-align: center;
       margin: 10px 0;
     }
 
@@ -75,9 +74,12 @@
     <button onclick="toggleTheme()" style="margin-left: 10px;">🌗 테마 전환</button>
   </div>
 
-  <button onclick="startGame()" disabled id="startBtn">게임 시작</button>
-  <button onclick="requestShuriken()" disabled id="shurikenBtn">수리검 요청</button>
-  <button onclick="nextLevel()" style="display:none;" id="nextLevelBtn">다음 레벨</button>
+  <div style="margin-top: 10px;">
+    <button onclick="startGame()" disabled id="startBtn">게임 시작</button>
+    <button onclick="requestShuriken()" disabled id="shurikenBtn">수리검 요청</button>
+    <button onclick="nextLevel()" style="display:none;" id="nextLevelBtn">다음 레벨</button>
+    <button onclick="confirmReset()" style="margin-left: 10px;">🔄 게임 초기화</button>
+  </div>
 
   <div id="playerList"></div>
   <div id="playerCardsCount" style="margin-bottom: 10px;"></div>
@@ -92,9 +94,48 @@
   <div id="status"></div>
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="script.js"></script>
   <script>
+    const socket = io();
+    let hand = [];
+    let played = [];
+    let playerName = null;
     let isDark = false;
+
+    function joinGame() {
+      const input = document.getElementById('username');
+      if (!input.value.trim()) {
+        alert('이름을 입력해주세요!');
+        return;
+      }
+      playerName = input.value.trim();
+      socket.emit('join', playerName);
+      input.disabled = true;
+      input.nextElementSibling.disabled = true;
+      document.getElementById('startBtn').disabled = false;
+      document.getElementById('shurikenBtn').disabled = false;
+    }
+
+    function startGame() {
+      socket.emit('start');
+      document.getElementById('status').innerText = '게임을 시작했습니다!';
+      document.getElementById('nextLevelBtn').style.display = 'none';
+    }
+
+    function requestShuriken() {
+      socket.emit('request-shuriken');
+    }
+
+    function nextLevel() {
+      socket.emit('next-level');
+      document.getElementById('nextLevelBtn').style.display = 'none';
+      document.getElementById('status').innerText = '다음 레벨로 이동 중...';
+    }
+
+    function confirmReset() {
+      if (confirm('정말로 게임을 초기화하시겠습니까? 모든 레벨과 카드가 초기화됩니다.')) {
+        socket.emit('force-reset');
+      }
+    }
 
     function toggleTheme() {
       isDark = !isDark;
@@ -112,6 +153,93 @@
         document.documentElement.style.setProperty('--border-color', '#333');
       }
     }
+
+    function renderCards() {
+      const container = document.getElementById('cards');
+      container.innerHTML = '';
+      hand.forEach((card) => {
+        const div = document.createElement('div');
+        div.className = 'card';
+        div.innerText = card;
+        div.onclick = () => {
+          socket.emit('play', card);
+          div.style.backgroundColor = 'gray';
+          div.onclick = null;
+        };
+        container.appendChild(div);
+      });
+    }
+
+    function renderPlayedCards() {
+      const playedContainer = document.getElementById('playedCards');
+      playedContainer.innerHTML = '';
+      played.sort((a, b) => a - b);
+      played.forEach(card => {
+        const cardDiv = document.createElement('div');
+        cardDiv.className = 'card';
+        cardDiv.innerText = card;
+        playedContainer.appendChild(cardDiv);
+      });
+    }
+
+    socket.on('hand', (cards) => {
+      hand = cards;
+      played = [];
+      renderCards();
+      document.getElementById('playedCards').innerHTML = '';
+    });
+
+    socket.on('played', (data) => {
+      played.push(data.card);
+      renderPlayedCards();
+      document.getElementById('status').innerText = `${data.by}님이 ${data.card} 카드를 냈습니다.`;
+    });
+
+    socket.on('playerList', (players) => {
+      document.getElementById('playerList').innerHTML = '<b>플레이어:</b> ' + players.map(p => p.name).join(', ');
+    });
+
+    socket.on('player-card-counts', (counts) => {
+      document.getElementById('playerCardsCount').innerText =
+        counts.map(c => `${c.name}: ${c.count}장`).join(' | ');
+    });
+
+    socket.on('update-resources', ({ lives, shuriken, level }) => {
+      document.getElementById('resources').innerText = `❤️ 생명: ${lives}  |  🥷 수리검: ${shuriken}  |  🎯 레벨: ${level}`;
+    });
+
+    socket.on('shuriken-used', (minCards) => {
+      minCards.forEach(card => played.push(card));
+      renderPlayedCards();
+      document.getElementById('status').innerText = `🥷 수리검이 사용되어 ${minCards.join(', ')} 카드가 공개되었습니다.`;
+    });
+
+    socket.on('life-lost', () => {
+      alert('틀린 순서! 💔 생명이 1개 줄었습니다.');
+    });
+
+    socket.on('game-over', (msg) => {
+      alert(msg);
+      document.getElementById('status').innerText = msg;
+      document.getElementById('nextLevelBtn').style.display = 'inline-block';
+    });
+
+    socket.on('game-won', () => {
+      document.getElementById('status').innerText = '🎉 신이 되었습니다! 게임 클리어!!';
+      document.getElementById('nextLevelBtn').style.display = 'inline-block';
+    });
+
+    socket.on('shuriken-requested', (votes) => {
+      document.getElementById('status').innerText = `🥷 수리검 요청 중... (${votes.length}명 동의)`;
+    });
+
+    socket.on('next-level-status', ({ count, total }) => {
+      document.getElementById('status').innerText = `🎯 다음 레벨 투표 중... (${count}/${total})`;
+    });
+
+    socket.on('status', (msg) => {
+      document.getElementById('status').innerText = msg;
+    });
   </script>
 </body>
 </html>
