--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The Mind - Online</title>
+  <title>더 마인드! for 일고삼고</title>
   <style>
     :root {
       --bg-color: #ffffff;
