--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </style>
 </head>
 <body>
-  <h1>The Mind - Online</h1>
+  <h1>더 마인드! for 일고삼고</h1>
 
   <div>
     <label for="username">이름:</label>
